--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "5.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "tool-db": "^2.1.0",
+    "tool-db": "../tool-chain",
     "typescript": "^4.1.2",
     "url": "^0.11.0",
     "web-vitals": "^1.0.1"
