--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "eth-crypto": "^2.3.0",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
@@ -23,7 +24,7 @@
     "react-scripts": "5.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "tool-db": "^2.1.0",
+    "tool-db": "^2.1.2",
     "typescript": "^4.1.2",
     "url": "^0.11.0",
     "web-vitals": "^1.0.1"
