--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "ts-gun-test",
+  "name": "tool-db-chat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tool-db/ecdsa-user": "^1.0.3",
+    "@tool-db/indexeddb-store": "^1.0.1",
+    "@tool-db/webrtc-network": "^1.0.1",
     "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "eth-crypto": "^2.3.0",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
+    "net": "^1.0.2",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "prettier": "^2.4.1",
@@ -24,7 +29,8 @@
     "react-scripts": "5.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "tool-db": "^2.3.0",
+    "tls": "^0.0.1",
+    "tool-db": "^2.5.1",
     "typescript": "^4.1.2",
     "url": "^0.11.0",
     "web-vitals": "^1.0.1"
