--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@tool-db/ecdsa-user": "^1.0.3",
+    "@tool-db/ecdsa-user": "^1.0.4",
     "@tool-db/indexeddb-store": "^1.0.1",
     "@tool-db/webrtc-network": "^1.0.1",
     "assert": "^2.0.0",
@@ -14,12 +14,12 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "eth-crypto": "^2.3.0",
-    "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
     "net": "^1.0.2",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
@@ -34,6 +34,11 @@
     "typescript": "^4.1.2",
     "url": "^0.11.0",
     "web-vitals": "^1.0.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "scripts": {
     "start": "react-app-rewired start",
